portfolio/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 2
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: docker.io/dundercup/portfolio:0.1.1
        ports:
        - containerPort: 3000
