portfolio/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    app: portfolio
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: portfolio
  type: LoadBalancer
